Project 1/force-app/main/default/objects/Mail__c/fields/Addressed_To__c.field-meta.xml
<CustomField>
    <fullName>Addressed_To__c</fullName>
    <formula>IF(LEN(Inhabitant__r.Contact__r.FirstName) &gt; 0, Inhabitant__r.Contact__r.LastName, Inhabitant__r.Contact__r.FirstName + &apos; &apos; +  Inhabitant__r.Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addressed To</label>
    <type>Text</type>
</CustomField>