Project 1/force-app/main/default/objects/Mail__c/fields/Inhabitant__c.field-meta.xml
<CustomField>
    <fullName>Inhabitant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inhabitant</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Mails</relationshipLabel>
    <relationshipName>Mails</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>