Project 1/force-app/main/default/objects/Mail__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>Inhabitant__r.Address__r.Street__c + &apos;, &apos; + Inhabitant__r.Address__r.City__c + &apos; &apos; +  TEXT(Inhabitant__r.Address__r.State__c) + &apos; &apos; +  Inhabitant__r.Address__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>