Project 1/force-app/main/default/objects/Mail__c/fields/statusOptions__c.field-meta.xml
<CustomField>
    <fullName>statusOptions__c</fullName>
    <label>statusOptions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>In_Transit</fullName>
                <label>In Transit</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>